Fixes: NB#257225 - Launcher does not allow the same launcher button to be pressed again if the started application crashes while the splash screen was visible
RevBy: TrustMe

--- a/themes/base/meegotouch/libmeegotouchhome/style/libmeegotouchhome-default.css
+++ b/themes/base/meegotouch/libmeegotouchhome/style/libmeegotouchhome-default.css
@@ -117,6 +117,8 @@ LauncherButtonStyle {
     downloading-placeholder-icon: "icon-l-downloading";
     installing-placeholder-icon: "icon-l-installing";
     broken-placeholder-icon: "icon-l-error";
+
+    launch-timeout: 5000;
 }
 
 LauncherButton#LauncherButton MSpinnerStyle {
